# TinyLog

./: CMakeLists.txt
base/: Likely.h
include/: LogCategory.h  LogHandler.h  LogLevel.h  LogMessage.h  LogName.h  LoggerDB.h  Portability.h  StringPiece.h
src/: LogCategory.cc  LogLevel.cc  LogMessage.cc  LogName.cc  LoggerDB.cc
src/test/: LogLevelTest.cc  LogNameTest.cc
system/: AtFork.cc  AtFork.h  CMakeLists.txt  ThreadId.cc  ThreadId.h  ThreadName.cc  ThreadName.h
system/test/: AtForkTest.cc  CMakeLists.txt  ThreadIdTest.cc  ThreadNameTest.cc
